--- a/HaarlemFestival/Content/bootstrap.css
+++ b/HaarlemFestival/Content/bootstrap.css
@@ -239,6 +239,7 @@ th {
     page-break-after: avoid;
   }
   .navbar {
+    background-color: #F8473E;
     display: none;
   }
   .btn > .caret,
@@ -4264,7 +4265,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top {
   top: 0;
-  border-width: 0 0 1px;
+  border-width: 0 0 0px;
 }
 .navbar-fixed-bottom {
   bottom: 0;
@@ -4589,7 +4590,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: #F8473E;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
@@ -4604,11 +4605,11 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #9d9d9d;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
+  color: #fff;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  color: #000;
   background-color: transparent;
 }
 .navbar-inverse .navbar-nav > .active > a,
