--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
                 <a class="navbar-brand" rel="home" href="#" title="Haarlem Festival">
                     <img style="max-width: 130px; margin-top: -12px;"
                          src="/img/Header/HF_logo_header.png"> 
+                    @* Swap href to actionlink???? *@
+
                 </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -36,9 +38,8 @@
                     <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
                 </ul>
                 <a class="navbar-right" rel="home" href="#" title="Haarlem Festival">
-                    <img style="max-width: 130px; margin-top: -12px;"
-                         src="/img/Header/Shopping_cart_header.png">
-                    @* Needs sizing!!!! *@
+                    <img style="width: 33px; height: 28px; margin-top: 10px;"
+                         src="/img/Header/Shopping_cart_header.png">    
                 </a>
             </div>
         </div>
