verdere bewerking checkout1 pagina html css

--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -3,13 +3,15 @@
     ViewBag.Title = "CheckOut1";
 }
 
-<section>
+<section class="CheckOut">
+
     <ul>
         <li>Step 1<br>Login</li>
         <li>Step 2<br>Personel info/Register</li>
         <li>Step 3<br>Payment</li>
         <li>Step 4<br>Tickets</li>
     </ul>>
+
     <p>By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
 
     <form>
