--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -22,3 +22,25 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* CHECKOUT PAGE */
+.CheckOut{
+    border-width: 2px;
+    border-radius: 20px;
+    margin-top: 50px;
+    border-style: solid;
+}
+
+    .CheckOut ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        border-bottom-style: solid;
+        border-bottom-width: 2px;
+        padding: 0px 0px 45px 10px;
+    }
+
+.CheckOut li {
+    float: left;
+    padding-right: 210px;
+}
