--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #EDECD8;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,40 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.contact_page_section{
+    color : white;
+}
+
+.contact_info {
+    float: left;
+    background-color: #CC6666;
+    padding : 20px;
+}
+
+.contact_section {
+    background-color: #CC6666;
+    padding: 0px;
+    margin-left : 200px;
+    height : 300px;
+}
+
+.contact_form_header {
+    background-color: #F6524A;
+    margin : 0px;
+    padding : 10px;
+}
+
+.contact_page_section form{
+    padding : 10px;
+    padding-top : 0px;
+}
+
+.contact_info_header{
+    margin-top : 0px;
+}
+
+.contact_required_text{
+    float : right;
 }
