Semantiek home ingetypt

--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -2,3 +2,57 @@
     ViewBag.Title = "Home Page";
 }
 
+<section>
+    <section>
+        <h1>text from db</h1>
+        <img src="#" alt="Jazz" />
+        <button>More info</button>
+    </section>
+
+    <section>
+        <h1>text from db</h1>
+        <img src="#" alt="Dinner" />
+        <button>More info</button>
+
+    </section>
+
+    <section>
+        <h1>text from db</h1>
+        <img src="#" alt="Talking" />
+        <button>More info</button>
+    </section>
+
+    <section>
+        <h1>text from db</h1>
+        <img src="#" alt="Historic" />
+        <button>More info</button>
+    </section>
+</section>
+
+<article>
+    <h1>What is the Haarlem Festival</h1>
+    <p>Hier komt text uit db</p>
+</article>
+
+<article>
+    <h1>Create your own festival</h1>
+    <p>Hier komt text uit db</p>
+    <button>Register</button>
+    <text>Already have an account? @Html.ActionLink("Log in", "Login", "Account")</text>
+</article>
+
+<article>
+    <h1>Event Highlights</h1>
+    <p>Hier komt text uit db</p>
+    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
+    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+
+    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
+    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+
+    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
+    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+
+    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
+    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+</article>
