--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿html{
+    position: relative;
+    min-height: 100%;
+}
+body {
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: #EDECD8;
@@ -67,6 +71,47 @@ footer {
     .footer-list-right li {
         width: inherit;
     }
+    /*-------------------------------------------Home page---------------------------------------------*/
+
+.event_summarys{
+    width: auto;
+}
+
+.event_summary{
+    width: 25%;
+    height: 350px;
+    float: left;
+    display: inline-block;
+    /*margin: 0px 6px 0px 0px;*/
+    padding: 0px 8px 0px 0px;
+}
+
+.event_summary h1{
+    color: white; 
+    font-size: 26px;
+    height: 50px;
+    background-color: #F8473E;
+    text-align: center;
+    line-height: 50px;
+}
+
+.event_summary button{
+    display: block;
+    vertical-align: bottom;
+}
+
+.event_summary img{
+    width: auto; 
+    text-align: center;
+    height: 100px; 
+}
+
+.info_festival{
+    display: inline-block;
+}
+
+
+    /*-------------------------------------------Contact page---------------------------------------------*/
 
 .contact_page_section{
     color : white;
