--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -2,34 +2,34 @@
     ViewBag.Title = "Home Page";
 }
 
-<section>
-    <section>
+<section class="event_summarys">
+    <section class="event_summary">
         <h1>text from db</h1>
         <img src="#" alt="Jazz" />
         <button>More info</button>
     </section>
 
-    <section>
+    <section class="event_summary">
         <h1>text from db</h1>
         <img src="#" alt="Dinner" />
         <button>More info</button>
 
     </section>
 
-    <section>
+    <section class="event_summary">
         <h1>text from db</h1>
         <img src="#" alt="Talking" />
         <button>More info</button>
     </section>
 
-    <section>
+    <section class="event_summary">
         <h1>text from db</h1>
         <img src="#" alt="Historic" />
         <button>More info</button>
     </section>
 </section>
 
-<article>
+<article class="info_festival">
     <h1>What is the Haarlem Festival</h1>
     <p>Hier komt text uit db</p>
 </article>
