--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -5,26 +5,25 @@
 <section class="event_summarys">
     <section class="event_summary">
         <h1>text from db</h1>
-        <img src="#" alt="Jazz" />
+        <section class="event_summary_img">juh<img src="#" alt="Jazz" /></section>
         <button>More info</button>
     </section>
 
     <section class="event_summary">
         <h1>text from db</h1>
-        <img src="#" alt="Dinner" />
-        <button>More info</button>
-
-    </section>
-
-    <section class="event_summary">
-        <h1>text from db</h1>
-        <img src="#" alt="Talking" />
+        <section class="event_summary_img"><img src="#" alt="Dinner" /></section>
         <button>More info</button>
     </section>
 
     <section class="event_summary">
         <h1>text from db</h1>
-        <img src="#" alt="Historic" />
+        <section class="event_summary_img"><img src="#" alt="Talking" /></section>
+        <button>More info</button>
+    </section>
+
+    <section class="event_summary">
+        <h1>text from db</h1>
+        <section class="event_summary_img"><img src="#" alt="Historic" /></section>
         <button>More info</button>
     </section>
 </section>
@@ -34,14 +33,7 @@
     <p>Hier komt text uit db</p>
 </article>
 
-<article>
-    <h1>Create your own festival</h1>
-    <p>Hier komt text uit db</p>
-    <button>Register</button>
-    <text>Already have an account? @Html.ActionLink("Log in", "Login", "Account")</text>
-</article>
-
-<article>
+<article class="event_highlights">
     <h1>Event Highlights</h1>
     <p>Hier komt text uit db</p>
     <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
@@ -56,3 +48,11 @@
     <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
     <p>@Html.ActionLink("text from db", "Login", "Account")</p>
 </article>
+
+<article class="register">
+    <h1>Create your own festival</h1>
+    <p>Hier komt text uit db</p>
+    <button>Register</button>
+    <text>Already have an account? @Html.ActionLink("Log in", "Login", "Account")</text>
+</article>
+
