jazz controller en view aangemaakt

--- a/HaarlemFestival/Views/Contact/Contact.cshtml
+++ b/HaarlemFestival/Views/Contact/Contact.cshtml
@@ -4,30 +4,30 @@
 }
 
 <section class="contact_page_section">
-    <h2 class="contact_header">Contact</h2>
+    <h2 class="contact_header">TEXT DB</h2>
     <hr class="contact_separation_header">
 
     <section class="contact_info">
-        <h3 class="contact_info_header">Address</h3>
-        <p>Final Draft <br />Zijlweg 7<br />1234 AA Haarlem</p>
-        <h3 class="contact_info_header">Phone</h3>
-        <p>0251-255689</p>
+        <h3 class="contact_info_header">TEXT DB</h3>
+        <p>TEXT DB <br />TEXT DB 7<br />TEXT DB</p>
+        <h3 class="contact_info_header">TEXT DB</h3>
+        <p>TEXT DB</p>
     </section>
         
     <section class="contact_section">
-        <h3 class="contact_form_header">Send us a message</h3>
+        <h3 class="contact_form_header">TEXT DB</h3>
         <form>
-            <p class="contact_required_text">*= required field!</p>
+            <p class="contact_required_text">TEXT DB</p>
             <fieldset>
-                <label class="contact_name_label">Name: *</label>
+                <label class="contact_name_label">TEXT DB</label>
                 <input class="contact_name_field" type="text" tabindex="1" required="required">
             </fieldset>
             <fieldset>
-                <label class="contact_email_label">Email address: *</label>
+                <label class="contact_email_label">TEXT DB</label>
                 <input class="contact_email_field" type="text" tabindex="2" required="required" />
             </fieldset>
             <fieldset class="contact_message_label">
-                <label class="contact_message_label">Message: *</label>
+                <label class="contact_message_label">TEXT DB</label>
                 <textarea class="contact_message_field" tabindex="3" required="required"></textarea>
             </fieldset>
             <fieldset>
