--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             <nav class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Jazz", "Index", "Jazz")</li>
+                    <li>@Html.ActionLink("Jazz", "Jazz", "Jazz")</li>
                     <li>@Html.ActionLink("Dinner", "Index", "Dinner")</li>
                     <li>@Html.ActionLink("Talking", "Index", "Talking")</li>
                     <li>@Html.ActionLink("Historic", "Index", "Historic")</li>
