--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -24,14 +24,15 @@ textarea {
 }
 
 /* CHECKOUT PAGE */
-.CheckOut{
+.CheckOut {
     border-width: 2px;
     border-radius: 20px;
     margin-top: 50px;
     border-style: solid;
+    background-color: #EDECD8;
 }
 
-    .CheckOut ul {
+.CheckOut ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -41,6 +42,22 @@ textarea {
     }
 
 .CheckOut li {
-    float: left;
-    padding-right: 210px;
+        float: left;
+        width: 25%;
+        text-align: center;
+        margin: auto;
+    }
+
+.form p{
+    width: 30%;
+    text-align: center;
+    margin: auto;
+}
+.form {
+    text-align: center;
+    margin: auto;
+}
+
+.selected {
+    background-color: #CC6666;
 }
