--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -1,20 +1,19 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "CheckOut1";
 }
 
 <section class="CheckOut">
 
     <ul>
-        <li>Step 1<br>Login</li>
-        <li>Step 2<br>Personel info/Register</li>
-        <li>Step 3<br>Payment</li>
-        <li>Step 4<br>Tickets</li>
+        <li class="selected">Step 1<br>Login</li>
+        <li class="form">Step 2<br>Personal info/Register</li>
+        <li class="form">Step 3<br>Payment</li>
+        <li class="form">Step 4<br>Tickets</li>
     </ul>>
 
-    <p>By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
+    <p class="form">By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
 
-    <form>
+    <form class="form">
         <h3>Login</h3>
         <p>Username:</p>
         <input type="text" />
@@ -23,9 +22,9 @@
         <button>Login</button>
     </form>
 
-    <h2>OR</h2>
+    <h2 class="form">OR</h2>
 
-    <form>
+    <form class="form">
         <h3>Continue without an account</h3>
         <button>Continue</button>
     </form>
