--- a/HaarlemFestival/Views/Jazz/Jazz.cshtml
+++ b/HaarlemFestival/Views/Jazz/Jazz.cshtml
@@ -3,5 +3,127 @@
     ViewBag.Title = "Jazz";
 }
 
-<h2>Jazz</h2>
+<section class="jazz_page_section">
+    <section class="jazz_page_info">
+        <section class="jazz_page_info_h+p">
+            <h2 class="jazz_page_info_h">TEXT HEADER JAZZ UIT DB</h2>
+            <hr class="jazz_page_info_line"/>
+            <p class="jazz_page_info_p">TEXT INFO JAZZ UIT DB</p>
+        </section>
+        <section class="jazz_page_info_locatiepatronaat">
+            <p>PATRONAAT INFO UIT DB</p>
+        </section>
+        <section class="jazz_page_info_locatiegrotemarkt">
+            <p>GROTEMARKT INFOT UIT DB</p>
+        </section>
+    </section>
+
+    <section class="jazz_page_program_days">
+        <h3 class="jazz_page_program_days_header">PROGRAMME HEADER UIT DB</h3>
+        <button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1">Thursday<br />26-07-2018</button>
+        <button name="friday" type="submit" class="jazz_page_program_friday" tabindex="2">Friday<br />27-07-2018</button>
+        <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3">Saturday<br />28-07-2018</button>
+        <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4">Sunday<br />29-07-2018</button>
+        <hr class="jazz_page_program_days_line"/>
+        <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">Send</button>
+    </section>
+
+    <section class="jazz_page_gumbokings">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_evolve">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_evolve">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_ntjamrosie">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_wickedjazzsounds">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_tomthomsonassemble">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+
+    <section class="jazz_page_jonnafraser">
+        <section>
+
+        </section>
+        <section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </section>
+    </section>
+</section>
 
