Home page edits
En proberen een plaatje uit de db te halen, is niet zo makkelijk bwois

--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <section class="event_summarys">
     <section class="event_summary">
         <h1>text from db</h1>
-        <section class="event_summary_img">juh<img src="#" alt="Jazz" /></section>
+        <section class="event_summary_img"><img src="/img/Home/Event_Sum_Jazz.jpg" width="277" height="300" alt="Jazz" /></section>
         <button>More info</button>
     </section>
 
@@ -27,32 +27,42 @@
         <button>More info</button>
     </section>
 </section>
+<section class="wrapper">
+    <section class="wrapper_left">
+        <article class="info_festival">
+            <h1>What is the Haarlem Festival</h1>
+            <p>Hier komt text uit db</p>
+        </article>
 
-<article class="info_festival">
-    <h1>What is the Haarlem Festival</h1>
-    <p>Hier komt text uit db</p>
-</article>
+        <article class="register">
+            <h1>Create your own festival</h1>
+            <p>Hier komt text uit db</p>
+            <button>Register</button>
+            <text>Already have an account? @Html.ActionLink("Log in", "Login", "Account")</text>
+        </article>
+    </section>
 
-<article class="event_highlights">
-    <h1>Event Highlights</h1>
-    <p>Hier komt text uit db</p>
-    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
-    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+    <article class="event_highlights">
+        <h1>Event Highlights</h1>
 
-    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
-    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+        <article class="event_highlight">
+            <h2>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+        </article>
 
-    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
-    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
+        <article class="event_highlight">
+            <h2>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+        </article>
 
-    <h2>@Html.ActionLink("text from db", "Login", "Account")</h2>
-    <p>@Html.ActionLink("text from db", "Login", "Account")</p>
-</article>
+        <article class="event_highlight">
+            <h2>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+        </article>
 
-<article class="register">
-    <h1>Create your own festival</h1>
-    <p>Hier komt text uit db</p>
-    <button>Register</button>
-    <text>Already have an account? @Html.ActionLink("Log in", "Login", "Account")</text>
-</article>
-
+        <article class="event_highlight">
+            <h2>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</h2>
+            <p>@Html.ActionLink("text from db", "Login", "Account", new { @class = "event_hl_link_makeup" })</p>
+        </article>
+    </article>
+</section>
