--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -77,7 +77,7 @@ footer {
 
 .event_summarys {
     width: auto;
-    height: 350px;
+    height: 370px;
 }
 
 .event_summary {
@@ -85,12 +85,13 @@ footer {
     height: 350px;
     float: left;
     display: inline-block;
-    /*margin: 0px 6px 0px 0px;*/
     padding: 0px 8px 0px 0px;
+    position: relative;
 }
 
 .event_summary:hover{
-    opacity:0.5;
+    opacity: 0.5;
+    cursor: pointer;
 }
 
     .event_summary h1 {
@@ -104,9 +105,9 @@ footer {
     }
 
     .event_summary button {
-
-        display: block;
-        margin: 0 auto;
+        position: absolute;
+        bottom: 1%;
+        left: 37%;
         background-color: transparent;
         border: none;
         font-weight: bold;
@@ -116,39 +117,65 @@ footer {
 .event_summary_img {
     width: auto;
     text-align: center;
-    height: 250px;
+    height: 300px;
+}
+.wrapper{
+    height: 424px;
+    text-align: center;
+}
+
+.wrapper h1{
+    font-size: 26px;
+    font-weight: bold;
+
+}
+.wrapper_left{
+    float: left;
+    width: 50%;  
+    height: inherit; 
+    margin: 0px 4px 0px 0px;
+ 
 }
 /*--------------Info section-----------------*/
 
 .info_festival {
-    /*display: inline-block;*/
-    float:left;
-    width: 49%;
-    margin: 0px 4px 0px 0px;
-    height: 300px;
+    float: initial;
+    width: auto;
+    height: 50%;
 }
 /*--------------Register section-----------------*/
 .register{
-    float:left;
-    width: 49%;
-    margin: 0px 4px 0px 0px;
-    height: 230px;
-}
-
-.register h1{
-    font-size: 20px;
-    text-align: center;
-}
-
-.register p{
-    text-align: center;
+    float: left;
+    width: 100%;
+    height: 50%;
+        
 }
 
 /*--------------Highlisghts section-----------------*/
 .event_highlights{
-    display: inline-block;
+    float: left;
     width: 49%;
     margin: 0px 0px 0px 4px;
+    height: inherit;
+}
+
+.event_highlight{
+    text-align:left;
+    color: black;  
+    padding-left: 15px; 
+    font-size: 16px;
+}
+
+.event_highlight h2{
+    font-size: 16px;
+}
+
+.event_hl_link_makeup{
+    color: black;       
+}
+
+.event_highlight :hover{
+    color: red;
 }
 
 
