--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -2,18 +2,18 @@
     ViewBag.Title = "CheckOut1";
 }
 
-<section class="CheckOut">
+<section class="CheckOut1">
 
     <ul>
         <li class="selected">Step 1<br>Login</li>
-        <li class="form">Step 2<br>Personal info/Register</li>
-        <li class="form">Step 3<br>Payment</li>
-        <li class="form">Step 4<br>Tickets</li>
+        <li>Step 2<br>Personal info/Register</li>
+        <li>Step 3<br>Payment</li>
+        <li>Step 4<br>Tickets</li>
     </ul>>
 
-    <p class="form">By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
+    <p>By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
 
-    <form class="form">
+    <form class="CheckOutLogin">
         <h3>Login</h3>
         <p>Username:</p>
         <input type="text" />
@@ -22,9 +22,9 @@
         <button>Login</button>
     </form>
 
-    <h2 class="form">OR</h2>
+    <h2>OR</h2>
 
-    <form class="form">
+    <form class="CheckOutRegister">
         <h3>Continue without an account</h3>
         <button>Continue</button>
     </form>
