check out 1 grotendeels afgerond

--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -9,7 +9,7 @@
         <li>Step 2<br>Personal info/Register</li>
         <li>Step 3<br>Payment</li>
         <li>Step 4<br>Tickets</li>
-    </ul>>
+    </ul>
 
     <p>By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
 
@@ -18,11 +18,17 @@
         <p>Username:</p>
         <input type="text" />
         <p>Password:</p>
-        <input type="text" />
+        <input type="text" /> <br />
         <button>Login</button>
     </form>
+    <section class="middenstuk">
+        <aside></aside>
 
-    <h2>OR</h2>
+        <h2>OR</h2>
+
+        <aside></aside>
+    </section>
+    
 
     <form class="CheckOutRegister">
         <h3>Continue without an account</h3>
