--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -260,8 +260,19 @@ footer {
     position: center;
     padding: 0;
     margin: 0;
-    display: inline-block;
 }
+
+    .CheckOut1 aside {
+        border-left: 1px;
+        height: 100px;
+        border-left-style: solid;
+        margin-left: 22px;
+
+    }
+.CheckOut1 p{
+    margin-top: 20px;
+}
+
 .selected {
     background-color: #F8473E;
 }
@@ -274,4 +285,8 @@ footer {
     display: inline-block;
     margin-left: 10%;
 
+}
+
+.middenstuk{
+    display : inline-block;
 }
