--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -143,12 +143,30 @@ footer {
     width: auto;
     height: 50%;
 }
+
+.info_festival p {
+    display: inline-block;
+    width: 88%;
+    text-align: center; 
+    font-size: 16px;
+}
+
 /*--------------Register section-----------------*/
 .register{
     float: left;
     width: 100%;
-    height: 50%;        
+    height: 50%;  
+    font-size: 16px;
+      
 }
+
+.register p{
+    display: inline-block;
+    width: 88%;
+    text-align: center; 
+    font-size: 16px;
+}
+
 
 .register button{
     display: block;
@@ -162,6 +180,10 @@ footer {
 
 .register button:hover{
     background-color: #137F28;
+}
+
+.register_link_makeup{
+    color: white;
 }
 
 /*--------------Highlisghts section-----------------*/
@@ -181,10 +203,13 @@ footer {
 
 .event_highlight h2{
     font-size: 16px;
+    font-weight: bold; 
 }
 
 .event_hl_link_makeup{
-    color: black;       
+    color: black;  
+    width: 84px;
+    height: 29px;     
 }
 
 .event_highlight :hover{
