--- a/HaarlemFestival/Views/Contact/Contact.cshtml
+++ b/HaarlemFestival/Views/Contact/Contact.cshtml
@@ -1,33 +1,33 @@
-﻿
+﻿@model HaarlemFestival.Model.Page
 @{
     ViewBag.Title = "Contact";
 }
 
 <section class="contact_page_section">
-    <h2 class="contact_header">TEXT DB</h2>
+    <h2 class="contact_header">@Model.PageDescriptions[0].Title</h2>
     <hr class="contact_separation_header">
 
     <section class="contact_info">
-        <h3 class="contact_info_header">TEXT DB</h3>
-        <p>TEXT DB <br />TEXT DB 7<br />TEXT DB</p>
-        <h3 class="contact_info_header">TEXT DB</h3>
-        <p>TEXT DB</p>
+        <h3 class="contact_info_header">@Model.PageDescriptions[1].Title</h3>
+        <p>@Html.Raw(HttpUtility.HtmlDecode(Model.PageDescriptions[1].DescriptionText))</p>
+        <h3 class="contact_info_header">@Model.PageDescriptions[2].Title</h3>
+        <p>@Model.PageDescriptions[2].DescriptionText</p>
     </section>
         
     <section class="contact_section">
-        <h3 class="contact_form_header">TEXT DB</h3>
+        <h3 class="contact_form_header">@Model.PageDescriptions[3].Title</h3>
         <form>
-            <p class="contact_required_text">TEXT DB</p>
+            <p class="contact_required_text">@Model.PageDescriptions[3].DescriptionText</p>
             <fieldset>
-                <label class="contact_name_label">TEXT DB</label>
+                <label class="contact_name_label">@Model.PageDescriptions[4].Title</label>
                 <input class="contact_name_field" type="text" tabindex="1" required="required">
             </fieldset>
             <fieldset>
-                <label class="contact_email_label">TEXT DB</label>
+                <label class="contact_email_label">@Model.PageDescriptions[5].Title</label>
                 <input class="contact_email_field" type="text" tabindex="2" required="required" />
             </fieldset>
             <fieldset class="contact_message_label">
-                <label class="contact_message_label">TEXT DB</label>
+                <label class="contact_message_label">@Model.PageDescriptions[6].Title</label>
                 <textarea class="contact_message_field" tabindex="3" required="required"></textarea>
             </fieldset>
             <fieldset>
