--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @if (IsSectionDefined("AddToHead"))
+    {
+        @RenderSection("AddToHead", required: false)
+    }
 </head>
 <body>
     <header class="navbar navbar-inverse navbar-fixed-top">
