--- a/HaarlemFestival/Views/Home/Index.cshtml
+++ b/HaarlemFestival/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     -Page should scroll, footer should stick
     -Clickable per event highlight not per line of text
     -From pixels to percentage
+    -Jazz picca is bullshit
 *@
 
 
